# openCalib

./: .gitignore  install_pangolin.sh
lidar2imu/auto_calib/: CMakeLists.txt  init-imu2lidar-extrinsic.json
lidar2imu/auto_calib/include/common/: Lidar_parser_base.h
lidar2imu/auto_calib/src/: calibration.cpp
lidar2imu/auto_calib/topic_convert/: start.sh
lidar2imu/auto_calib/topic_convert/Sophus-1.22.4/: CMakeLists.txt
lidar2imu/auto_calib/topic_convert/src/online_calib_demo/: CMakeLists.txt  package.xml
lidar2imu/auto_calib/topic_convert/src/online_calib_demo/src/: dataCollector.cpp  odomCalculate.cpp  odomPub.cpp  online_calib.h
lidar2imu/manual_calib/: CMakeLists.txt
lidar2imu/manual_calib/src/: pcd_view_stitcher.cpp  run_lidar2imu.cpp
lidar2imu/topic_convert/: randomTopic.py
lidar2imu/topic_convert/src/online_calib_demo/src/: dataCollector.cpp  fix2odom.cpp  imu2odom.hpp  odomPub.cpp  online_calib.cpp
