<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>onlinecalib</name>
  <version>0.0.0</version>
  <description>Online Calibration Demonstration for LiDAR and IMU Integration</description>
  <!-- 更新了描述，以更准确地反映包的功能 -->
  <maintainer email="1774143443@qq.com">czj</maintainer>
  <license>Apache-2.0</license> <!-- 替换为具体的许可证 -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_filters</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>geodesy</depend>
  <!-- 注意小写s -->
  <!-- <depend>sophus</depend>  -->
  <depend>fmt</depend> <!-- 添加fmt依赖 -->
  <depend>boost</depend>
  <depend>pcl</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>